test/parser/no_main_function.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: main function not found in global module
